Add MLFlow data to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ data/
 # PyEnv Virtual Environment
 .python-version
 
+# MLFlow
+mlruns/
+mlartifacts/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
